--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,16 +2,36 @@ body{
     font-family: Lato, sans-serif;
     margin: 0;
 }
+h1{
+    font-family: Roboto, sans-serif;
+    line-height: 1.2em;
+    font-size: 44px;
+    font-weight: 500;
+    margin: 0px;
+}
 h3 {
     font-size: 42px;
 }
+h4{
+    font-family: Roboto, sans-serif;
+    line-height: 1.2em;
+    font-weight: normal;
+    font-weight: 400;
+    font-size: 26px;
+}
 
 /*HEADER*/
+.navbar{
+    position: fixed;
+    width: 100%;
+    display: inline-block;
+}
 .header{
-    background-color: #0298D7;
+    /* background-color:#02A4D7 ; */
+    background-color: rgb(9, 162, 218, 0.9);
     color: white;
     display: flex;
-    height: 70px;
+    height: 50px;
     justify-content: space-between;
 }
 ol,
@@ -26,11 +46,11 @@ ul{
     padding: 5px;
 }
 .icon-logo{
-    width: 35px;
+    width: 22px;
     margin: 0;
 }
 .icon-nombre{
-    width: 110px;
+    width: 90px;
     margin-left: 8px;
 }
 .header a{
@@ -45,6 +65,7 @@ ul{
 }
 .menu{
     height: inherit;
+
 }
 .header ol{
     margin: 0px;
@@ -58,8 +79,8 @@ ul{
 /*HERO*/
 .hero{
     background-image: url('../assets/FondoL2.png');
-    height: 700px;
-    background-size: 1450px 700px;
+    height: 900px;
+    background-size: 1450px 900px;
     background-position-x: center;
     background-repeat: no-repeat;
     display: flex;
@@ -67,7 +88,7 @@ ul{
     justify-content: space-between;
 }
 .hero-text{
-    margin-left: 150px;
+    margin-left: 100px;
     text-align: center;
     margin-bottom: 100px;
 }
@@ -75,37 +96,42 @@ ul{
     background-color: #80F438;
     border: 0px;
     border-radius: 8px;
-    font-size: 25px;
-    padding: 15px;
+    width: 250px;
+    font-size: 28px;
+    padding: 18px;
     color: white;
 }
 .hero-img{
-    margin-right: 70px;
+    margin-bottom: 70px;
 }
 .hero-img-serv{
     width: 600px;
 }
 
-h1{
-    font-family: Roboto, sans-serif;
-    line-height: 1.2em;
-    font-size: 48px;
-    margin: 0px;
-}
-h4{
-    font-family: Roboto, sans-serif;
-    line-height: 1.2em;
-    font-weight: normal;
-    font-size: 26px;
-}
-
 /*COMUNIDAD*/
-.comunidad-detail{
+.comunidad{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, auto);
+}
+.item:nth-of-type(1){
+    grid-column: 1 / span 2;
+    grid-row: 1 / span 1;
+}
+.item:nth-of-type(2){
+    grid-column: 1 / span 1;
+    grid-row: 2 / span 1;
+}
+.item:nth-of-type(3){
+    grid-column: 2 / span 1;
+    grid-row: 2 / span 1;
+}
+/* .comunidad-detail{
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
     padding: 0 100px;
-}
+} */
 .container-comunidad{
     display: flex;
     justify-content: center;
@@ -116,18 +142,27 @@ h4{
     display: flex;
     width: 800px;
     text-align: center;
-    font-size: 28px;
+    font-size: 24px;
+}
+.comunidad-detail{
+    width: 500px;
 }
 .comunidad-text{
-    width: 500px;
+    display: flex;
     justify-content: center;
 }
 .comunidad-text p{
-    font-size: 18px;
+    font-size: 22px;
+
 }
-.comunidad-img{
-    width: 500px;
-    margin-right: 100px;
+.comunidad-imgb{
+    margin: 0px;
+    width: 400px;
+}
+.comunidad figure{
+    display: flex;
+    margin: 0px;
+    justify-content: center;
 }
 
 /*CONTACTO*/
