--- a/css/estilos.css
+++ b/css/estilos.css
@@ -221,6 +221,16 @@ ul{
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, auto);
 }
+.proyectos p{
+    justify-content: center;
+    font-size: 20px;
+    font-weight: bold;
+
+}
+.proyectos-container-p{
+    display: flex;
+    justify-content: center;
+}
 .proyectos-container{
     display: flex;
     justify-content: center;
@@ -228,23 +238,27 @@ ul{
 }
 .proyectos-container h2{
     font-size: 36px;
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
 .proyectos-proyecto1{
-    height: 100vh;
-    background-color: rgba(171, 171, 171, 0.523);
-    border: 1px solid tomato;
+    height: 600px;
+/*     background-color: rgba(171, 171, 171, 0.523); */
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
 }
 .proyectos-proyecto1 img{
-    width: 180px;
+    width: 190px;
 }
 .proyectos-img1{
     display: flex;
     justify-content: center;
 }
 .proyectos-proyecto2{
-    height: 100vh;
-    background-color: rgba(171, 171, 171, 0.523);
-    border: 1px solid tomato;
+    height: 600px;
+/*     background-color: rgba(171, 171, 171, 0.523); */
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
 }
 .proyectos-img2{
     display: flex;
@@ -255,9 +269,29 @@ ul{
 
 }
 .proyectos-proyecto3{
-    height: 100vh;
-    background-color: rgba(171, 171, 171, 0.523);
-    border: 1px solid tomato;
+    height: 600px;
+/*     background-color: rgba(171, 171, 171, 0.523); */
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+}
+.proyectos-img3{
+    display: flex;
+    justify-content: center;
+}
+.proyectos-proyecto3 img{
+    width: 180px;
+}
+.proyectos-tarjetas{
+    display: flex;
+    justify-content: center;
+}
+.proyectos-tarjetas p{
+    font-weight: 500;
+    text-align: center;
+}
+.proyectos-tarjetas small{
+    font-size: 14px;
+    font-weight: 900;
 }
 
 /*CONTACTO*/
@@ -272,26 +306,27 @@ ul{
     justify-content: center;
 }
 .contacto-buttons{
+    margin-bottom: 20px;
     height: 150px;
     display: flex;
     justify-content: center;
 }
 .contacto-button1{
-    margin-right: 20px;
+    margin-right: 30px;
     padding: 20px;
     background-color: #0ACADF;
     border: 5px solid #0A94DF;
     color: white;
-    font-size: 36px;
+    font-size: 32px;
     border-radius: 20px;
 }
 .contacto-button2{
-    margin-left: 20px;
+    margin-left: 30px;
     padding: 20px;
     background-color: #0A94DF;
     border: 5px solid #0ACADF;
     color: white;
-    font-size: 36px;
+    font-size: 32px;
     border-radius: 20px;
 }
 
@@ -313,25 +348,29 @@ footer{
     font-size: 28px;
     color: white;
 }
+::placeholder{
+    color: white;
+    font-size: 16px;
+    
+}
 .footer-email input{
     background-color: transparent;
     border: 1px solid white;
     border-radius: 5px;
     color: white;
     margin-left: 10px;
-    height: 40px;
+    height: 45px;
     width: 400px;
 }
 .footer-email button{
     background-color: #80F438;
     border: 0;
     border-radius: 5px;
-    padding: 5px;
-    font-size: 26px;
+    padding: 10px;
+    font-size: 24px;
     margin-left: 10px;
     color: white;
 }
-input{
-   width: 300px;
-   height: 30px;
+.contacto-img img{
+    width: 50px;
 }
