--- a/css/estilos.css
+++ b/css/estilos.css
@@ -367,7 +367,7 @@ footer {
   justify-content: center;
 }
 .footer {
-  background-image: url(../assets/Fondo\4\Leanber\Landing.png);
+  background-image: url(../assets/Fondo4LeanberLanding.png);
   background-size: 1480px 700px;
   background-repeat: no-repeat;
   height: 700px;
