Commint con correcciones ortograficas y delineado de textos principales

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -186,6 +186,10 @@ ul {
 .comunidad-detail {
   width: 500px;
 }
+.comunidad-detail h3{
+  padding-bottom: 5px;
+  border-bottom: 10px solid #09c9dd;
+}
 .comunidad-text {
   display: flex;
   justify-content: center;
@@ -208,11 +212,11 @@ ul {
   width: 100%;
   overflow: scroll;
   position: relative;
-  background-color: #09c9dd;
+/*   background-color: #09c9dd */;
 }
-.servicios h2 {
-  margin-top: 70px;
-  margin-bottom: 40px;
+.servicios-title h2 {
+  margin: 0px;
+  padding: 50px 0px 20px 0px;
   text-align: center;
   justify-items: center;
   font-size: 38px;
@@ -220,8 +224,10 @@ ul {
 .servicios-item h3 {
   font-size: 30px;
   text-align: center;
-  color: white;
+  color: black;
   font-weight: bold;
+  border-bottom: 8px solid #09c9dd;
+  padding-bottom: 5px;
 }
 .servicios-item p {
   font-size: 24px;
@@ -233,8 +239,8 @@ ul {
 }
 .servicios-item {
   display: inline-block;
-  border: 1px solid white;
-  background-color: rgb(9, 182, 221, 0.2);
+  border: 1px solid #09c9dd;
+/*   background-color: rgb(9, 182, 221, 0.2); */
   width: 650px;
   height: 440px;
   border-radius: 10px;
@@ -273,14 +279,13 @@ ul {
   grid-column: 1 / span 3;
 }
 .proyectos-container h2 {
+  padding: 25px 0px;
   font-size: 36px;
-  margin-top: 20px;
-  margin-bottom: 10px;
 }
 .proyectos-proyecto1 {
-  height: 600px;
+  height: 550px;
   /*     background-color: rgba(171, 171, 171, 0.523); */
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid #09c9dd;
   border-radius: 10px;
 }
 .proyectos-proyecto1 img {
@@ -292,9 +297,9 @@ ul {
   justify-content: center;
 }
 .proyectos-proyecto2 {
-  height: 600px;
+  height: 550px;
   /*     background-color: rgba(171, 171, 171, 0.523); */
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid #09c9dd;
   border-radius: 10px;
 }
 .proyectos-img2 {
@@ -305,9 +310,9 @@ ul {
   width: 400px;
 }
 .proyectos-proyecto3 {
-  height: 600px;
+  height: 550px;
   /*     background-color: rgba(171, 171, 171, 0.523); */
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid #09c9dd;
   border-radius: 10px;
 }
 .proyectos-img3 {
@@ -353,14 +358,15 @@ ul {
   color: white;
 }
 .contacto-button1 {
-  background-image: url(../assets/whatsapp-2.png);
+  /* background-image: url(../assets/whatsapp-2.png);
   background-size: 35px;
   background-repeat: no-repeat;
   background-position-y: 90px;
   background-position-x: center;
-
+ */
   margin-right: 70px;
   padding: 20px;
+  height: 120px;
   background-color: #0acadf;
   border: 5px solid #0a94df;
   color: white;
@@ -370,6 +376,7 @@ ul {
 .contacto-button2 {
   margin-left: 70px;
   padding: 20px;
+  height: 120px;
   background-color: #0a94df;
   border: 5px solid #0acadf;
   color: white;
