--- a/css/estilos.css
+++ b/css/estilos.css
@@ -293,6 +293,21 @@ ul {
   margin-top: 20px;
 }
 
+/*Corousel de bootstrap*/
+/* .carousel-item{
+  width: 100vw;
+  height: 95vh;
+}
+.corousel-item-img img{
+  width: 70%;
+  height: 70%;
+}
+.w-100{
+  width: 50% !important;
+  height: 50% !important;
+  align-content: center;
+  justify-content: center;
+} */
 /*PROYECTOS*/
 .proyectos {
   display: grid;
@@ -482,6 +497,7 @@ footer {
 .contacto-details {
   display: grid;
   margin: 0px 80px;
+  padding-bottom: 10px;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, auto);
 }
@@ -564,6 +580,41 @@ footer {
   body{
     border: 5px solid yellow;
   }
+  .navbar{
+    width: 100vw;
+  }
+  .header a{
+    font-size: 14px;
+  }
+
+  /*Hero*/
+
+  .hero{
+    flex-wrap: nowrap;
+    font-size: 36px;
+  }
+  .hero-text{
+    width: 50%;
+    margin: 0px;
+  }
+  .hero-text h1{
+    font-size: .9em;
+  }
+  .hero-text h4{
+    font-size: .5em;
+  }
+  .hero-img{
+    width: 50%;
+  }
+  .hero-img-serv{
+    width: 100%;
+  }
+  .hero-img figure{
+    margin: 30px 0px;
+  }
+  .hero-img-redes{
+    margin-top: 20px;
+  }
 }
 
 /*tablets*/
@@ -621,7 +672,15 @@ footer {
   }
 
   /*Hero*/
+  .hero{
+    flex-wrap: wrap;
+  }
+  .hero-text{
+    width: 100vw;
+    margin-top: 20px;
+  }
   .hero-img{
+    width: 100vw;
     display: flex;
     justify-content: center;
   }
@@ -671,7 +730,7 @@ footer {
     color: black;
     font-weight: bold;
     border: 0px;
-    /* border-bottom: 8px solid #09c9dd; */
+    border-bottom: 8px solid #09c9dd; 
     padding-bottom: 5px;
   }
   .servicios-item p {
@@ -685,11 +744,11 @@ footer {
   .servicios-item {
     display: inline-block;
     width: 50%;
-    height: 400px;
     border: 0px;
-    border-radius: 10px;
+    height: 350px;
     overflow: hidden;
     margin-right: 10px;
+    background-color: #09c9dd4d;
   }
   .servicios-container-img img{
     max-width: 80%;
@@ -699,6 +758,9 @@ footer {
     display: flex;
     justify-content: center;
     align-content: center;
+  }
+  .servicios-article p{
+    font-size: .43em;
   }
   .servicios-container-img {
     display: flex;
@@ -930,7 +992,10 @@ footer {
     font-size: 36px;
   }
   .servicios-item{
-    width: 98%;
+    width: 95%;
+    height: 260px;
+    background-color: #09c9dd4d;
+    margin-right: 0px;
   }
   .servicios-title{
     padding: 0px;
@@ -942,7 +1007,7 @@ footer {
     font-size: .5em;
   }
   .servicios-article p{
-    font-size: .4em;
+    font-size: .33em;
   }
 
   /*Proyectos*/
