Ajustes de minesiones en sección de proyectos a la dimensión para pantallas de 1024 en imagenes.

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -613,6 +613,12 @@ footer {
   .hero-img-redes{
     margin-top: 20px;
   }
+  /*Proyectos*/
+
+  .proyectos img{
+    width: 100%;
+    height: 250px;
+  }
 }
 
 /*tablets*/
