--- a/css/estilos.css
+++ b/css/estilos.css
@@ -30,6 +30,10 @@
   content: '\e900';
 }
 
+:root {
+  --box-shadow-light: 0 10px 20px rgba(0, 0, 0, 0.19),
+    0 6px 6px rgba(0, 0, 0, 0.23);
+}
 html,
 body {
   font-family: Lato, sans-serif;
@@ -149,7 +153,7 @@ ul {
 
 /*HERO*/
 .hero {
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   background-image: url('../assets/FondoL2.png');
   height: 800px;
   background-size: cover;
@@ -193,25 +197,78 @@ ul {
   margin-bottom: 130px;
   margin-right: 2rem;
 }
+/* space and astronaut image */
+.space-section {
+  margin-top: 5rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  position: relative;
+  /* top: 0;
+  left: 0; */
+  width: 100%;
+  height: 60vh;
+  overflow: hidden;
+}
+/* .space-img-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 40vh;
+  overflow: hidden;
+} */
+.space-img-astronauta {
+  max-width: 200px;
+  z-index: 2;
+  margin-top: 3rem;
+}
+.space-img-espacio {
+  width: 100%;
+  z-index: 1;
+  margin-top: 22vh;
+}
+.space-img-espacio-bg {
+  width: 100%;
+  height: 100%;
+  -webkit-filter: blur(8px);
+  filter: blur(8px);
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 
 /*COMUNIDAD*/
 .comunidad {
+  display: flex;
+  flex-direction: column;
+}
+.comunidad-container {
+  display: flex;
+  flex-direction: row;
+  padding: 0 3em;
+}
+/* .comunidad {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, auto);
+  grid-template-rows: repeat(3, auto);
 }
 .item:nth-of-type(1) {
   grid-column: 1 / span 2;
-  grid-row: 1 / span 1;
+  grid-row: 2 / span 1;
 }
 .item:nth-of-type(2) {
   grid-column: 1 / span 1;
-  grid-row: 2 / span 1;
+  grid-row: 3 / span 1;
 }
 .item:nth-of-type(3) {
   grid-column: 2 / span 1;
-  grid-row: 2 / span 1;
-}
+  grid-row: 3 / span 1;
+} */
 /* .comunidad-detail{
     display: flex;
     justify-content: space-between;
@@ -231,7 +288,8 @@ ul {
   font-size: 24px;
 }
 .comunidad-detail {
-  width: 80%;
+  width: 100%;
+  margin-right: 4rem;
 }
 .comunidad-detail h3 {
   padding-bottom: 5px;
@@ -240,13 +298,19 @@ ul {
 .comunidad-text {
   display: flex;
   justify-content: center;
+  width: 70%;
 }
 .comunidad-text p {
   font-size: 22px;
 }
+.comunidad-img {
+  width: 30%;
+  align-items: center;
+  display: flex;
+}
 .comunidad-imgb {
   margin: 0;
-  width: 400px;
+  /* width: 400px; */
 }
 .comunidad-img img {
   max-width: 100%;
@@ -268,7 +332,7 @@ ul {
   border-radius: 10px;
   position: relative;
 
-  border: 1px solid #09c9dd;
+  /* border: 1px solid #09c9dd; */
 }
 .carousel_slide {
   /* max-height: 80vh; */
@@ -382,21 +446,6 @@ ul {
   margin-top: 20px;
 }
 
-/*Corousel de bootstrap*/
-/* .carousel-item{
-  width: 100vw;
-  height: 95vh;
-}
-.corousel-item-img img{
-  width: 70%;
-  height: 70%;
-}
-.w-100{
-  width: 50% !important;
-  height: 50% !important;
-  align-content: center;
-  justify-content: center;
-} */
 /*PROYECTOS*/
 .proyectos {
   display: grid;
@@ -644,8 +693,10 @@ footer {
   grid-template-rows: repeat(2, 1fr);
 }
 .contacto-link {
+  animation: rotateAnimation 2s 2 ease-in-out;
   width: 50px;
   height: 50px;
+  justify-self: center;
 }
 .contacto-link.facebook {
   background-image: url(../assets/facebook.png);
@@ -658,6 +709,16 @@ footer {
 .contacto-link.twitter {
   background-image: url(../assets/twitter-2.png);
   background-size: 50px 50px;
+  /* animation: rotateAnimation 2s infinite; */
+}
+
+@keyframes rotateAnimation {
+  from {
+    transform: rotateX(0deg) rotateY(0deg);
+  }
+  to {
+    transform: rotateX(360deg) rotateY(360deg);
+  }
 }
 
 .contacto-details2 {
@@ -794,6 +855,9 @@ footer {
   .carousel_container {
     width: 80%;
   }
+  .servicios-item {
+    width: 80vw;
+  }
   /*Hero*/
   .hero {
     flex-wrap: wrap;
@@ -819,11 +883,19 @@ footer {
     display: block;
     font-size: 36px;
   }
+  .comunidad-container {
+    flex-direction: column;
+  }
+  .comunidad-text,
+  .comunidad-img {
+    width: 100%;
+  }
   .container-comunidad {
     margin-bottom: 0px;
   }
   .comunidad-detail {
     text-align: center;
+    margin: 0;
   }
   .comunidad-parrafo {
     font-size: 0.5em;
@@ -868,7 +940,7 @@ footer {
     white-space: nowrap;
     padding-bottom: 10px;
   }
-  .servicios-item {
+  /* .servicios-item {
     display: inline-block;
     width: 50%;
     border: 0px;
@@ -876,7 +948,7 @@ footer {
     overflow: hidden;
     margin-right: 10px;
     background-color: #09c9dd4d;
-  }
+  } */
   .servicios-container-img img {
     max-width: 80%;
     max-height: 100%;
@@ -1064,9 +1136,15 @@ footer {
   /* servicios */
   .carousel_container {
     width: 90%;
+    height: 70vw;
   }
-
-  /* proyectos */
+  .servicios-item {
+    width: 90vw;
+  }
+  /* comunidad */
+  .comunidad-container {
+    padding: 0px 1em;
+  }
   /*Proyectos*/
   .proyectos {
     font-size: 36px;
@@ -1173,169 +1251,4 @@ footer {
     width: 80%;
     margin: auto;
   }
-}
-
-/* mobil */
-@media screen and (max-width: 320px) {
-  /*Hero*/
-  /* .hero {
-    font-size: 36px;
-  }
-  .hero-text {
-    margin-left: 0px;
-    margin-top: 2%;
-  }
-  .hero-text h1 {
-    font-size: 0.8em;
-    margin: 0px 10px;
-  }
-  .hero-text h4 {
-    font-size: 0.5em;
-    margin-top: 1%;
-  }
-  .hero button {
-    width: 200px;
-    padding: 12px;
-  }
-  .hero a {
-    font-size: 0.7em;
-  }
-  .hero-img {
-    display: flex;
-    justify-content: center;
-  }
-  .hero-img-redes {
-    display: none;
-  }*/
-
-  /*Comunidad*/ /*
-  .comunidad {
-    font-size: 36px;
-  }
-  .container-comunidad {
-    margin-top: 1%;
-  }
-  .comunidad-parrafo {
-    margin-top: 1%;
-    font-size: 0.4em;
-  }
-  .comunidad-detail h3 {
-    font-size: 0.8em;
-  }
-  .servicios-title h2 {
-    font-size: 0.7em;
-  }*/
-
-  /*Servicios*/ /*
-  .servicios-carousel {
-    font-size: 36px;
-  }
-  .servicios-item {
-    width: 95%;
-    height: 260px;
-    background-color: #09c9dd4d;
-    margin-right: 0px;
-  }
-  .servicios-title {
-    padding: 0px;
-  }
-  .servicios-carousel-items {
-    padding: 0px;
-  }
-  .servicios-article h3 {
-    font-size: 0.5em;
-  }
-  .servicios-article p {
-    font-size: 0.33em;
-  }*/
-
-  /*Contacto*/ /*
-  .contacto {
-    font-size: 36px;
-    margin: 3rem 0;
-    height: 100%;
-  }
-  .contacto-buttons {
-    margin: 0px;
-    height: 100px;
-  }
-  .contacto-title h3 {
-    font-size: 0.5em;
-    margin: 4% 2%;
-  }
-  .contacto-button1 {
-    width: 45%;
-    height: 50%;
-    padding: 0px;
-    margin: 0px 5px;
-    border: 2px solid #0a94df;
-  }
-  .contacto-button2 {
-    width: 45%;
-    height: 50%;
-    padding: 0px;
-    margin: 0px 5px;
-    border: 2px solid #0acadf;
-  }
-  .contacto-buttons a {
-    font-size: 0.5em;
-    margin-bottom: 5px;
-  }*/
-
-  /*Footer*/ /*
-  .footer {
-    font-size: 36px;
-  }
-  .footer-email {
-    margin-top: 12%;
-    margin-bottom: 2%;
-  }
-  .footer-email-text {
-    font-size: 0.3em;
-  }
-  .footer-button a {
-    font-size: 0.4em;
-  }
-  .footer-email button {
-    font-size: 16px;
-  }
-  .contacto-details {
-    font-size: 0.5em;
-    width: 100%;
-    margin-left: 10px;
-  }
-  .contacto-img-logo {
-    width: 10px;
-  }
-  .contacto-img-nombre {
-    width: 30px;
-  }
-  .footer-follow {
-    font-size: 0.4em;
-  }
-  .contacto-links {
-    font-size: 0.3em;
-  }
-  .contacto-details2 {
-    font-size: 0.3em;
-  }
-  .contacto-link {
-    width: 20px;
-    height: 30px;
-  }
-  .contacto-link.facebook {
-    background-size: 10px 10px;
-    background-repeat: no-repeat;
-  }
-  .contacto-link.instagram {
-    background-size: 10px 10px;
-    background-repeat: no-repeat;
-  }
-  .contacto-link.twitter {
-    background-size: 10px 10px;
-    background-repeat: no-repeat;
-  }
-  .contacto-links p {
-    margin: 0px;
-  } */
 }
