--- a/css/estilos.css
+++ b/css/estilos.css
@@ -217,6 +217,8 @@ ul {
   margin-top: 50px;
   margin-left: 100px;
   text-align: center;
+  display: flex;
+    flex-direction: column
 }
 .hero-text a {
   color: white;
