--- a/css/estilos.css
+++ b/css/estilos.css
@@ -334,7 +334,7 @@ ul {
 }
 .comunidad-img img {
   max-width: 100%;
-  max-height: 100%;
+  height: 100%;
 }
 .comunidad figure {
   display: flex;
@@ -462,7 +462,7 @@ ul {
 }
 .servicios-container-img img {
   max-width: 35%;
-  max-height: 35%;
+  height: 35%;
 }
 .servicios-container-img .servicios-item-img-landing {
   max-width: 60%;
