[Hotfix] changed margin top of bottom buttons on <480px screens

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1181,6 +1181,7 @@ footer {
   }
   .contacto-buttons {
     flex-direction: column;
+    margin-top: 4rem;
   }
   .contacto-buttons button {
     margin: 1rem;
